--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
         "docsearch",
         "dotenv",
         "langchain",
+        "streamlit",
+        "Udemy",
         "vectorstores"
     ]
 }
