Add new words to cSpell and update terminal settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,18 @@
 {
     "cSpell.words": [
+        "búsqueda",
         "consts",
+        "Definición",
         "docsearch",
         "dotenv",
+        "función",
         "langchain",
+        "pline",
+        "prevlines",
         "streamlit",
         "Udemy",
         "vectorstores"
-    ]
+    ],
+    "terminal.explorerKind": "external",
+    "terminal.integrated.automationProfile.linux": {}
 }
